# template-mcp-server

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/template_mcp_server/: server.py
tests/: test_server.py
